--- a/themes/notes/layouts/_default/baseof.html
+++ b/themes/notes/layouts/_default/baseof.html
@@ -5,10 +5,19 @@
 >
     <head>
         {{ partial "head.html" . }}
+        {{ block "head" . }}
+        {{ end }}
     </head>
     <body>
-        <header class="container header">{{ partial "header.html" . }}</header>
-        <main class="container">{{ block "main" . }}{{ end }}</main>
-        <footer class="container">{{ partial "footer.html" . }}</footer>
+        <header class="container header">
+            {{ partial "header.html" . }}
+        </header>
+        <main class="container">
+            {{ block "main" . }}
+            {{ end }}
+        </main>
+        <footer class="container">
+            {{ partial "footer.html" . }}
+        </footer>
     </body>
 </html>
