--- a/themes/notes/layouts/_default/home.html
+++ b/themes/notes/layouts/_default/home.html
@@ -1,10 +1,4 @@
-{{ define "main" }} {{ .Content }}
-<ul>
-    {{ range site.RegularPages.ByPublishDate.Reverse }}
-    <li>
-        <a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a> | {{ time.Format
-        "January 2, 2006" .PublishDate }}
-    </li>
-    {{ end }}
-</ul>
+{{ define "main" }}
+    <h1>{{ .Title }}</h1>
+    {{ .Content }}
 {{ end }}
