--- a/themes/notes/layouts/partials/menu.html
+++ b/themes/notes/layouts/partials/menu.html
@@ -11,10 +11,11 @@ Renders a menu for the given menu ID.
 {{- $menuID := .menuID }}
 
 {{- with index site.Menus $menuID }}
-  <nav>
+  <nav id="siteNav">
     <ul>
       {{- partial "inline/menu/walk.html" (dict "page" $page "menuEntries" .) }}
     </ul>
+    <button id="menuCloseBtn"><i data-lucide="x" class="header__menu-close-btn"></i></button>
   </nav>
 {{- end }}
 
