Fix issues with relative URLs

--- a/themes/notes/layouts/partials/menu.html
+++ b/themes/notes/layouts/partials/menu.html
@@ -15,7 +15,7 @@ Renders a menu for the given menu ID.
     <ul>
       {{- partial "inline/menu/walk.html" (dict "page" $page "menuEntries" .) }}
     </ul>
-    <button id="menuCloseBtn"><i data-lucide="x" class="header__menu-close-btn"></i></button>
+    <button id="menuCloseBtn" class="header__menu-close-btn"><i data-lucide="x"></i></button>
   </nav>
 {{- end }}
 
