--- a/themes/notes/layouts/partials/head.html
+++ b/themes/notes/layouts/partials/head.html
@@ -3,4 +3,4 @@
 <title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}</title>
 {{ partialCached "head/css.html" . }}
 {{ partialCached "head/js.html" . }}
-<link rel="stylesheet" href="/css/syntax.css">
+<link rel="stylesheet" href="{{ relURL `css/syntax.css` }}">
