--- a/themes/notes/layouts/partials/header.html
+++ b/themes/notes/layouts/partials/header.html
@@ -1,3 +1,3 @@
 <span class="header__title">{{ site.Title }}</span>
-<button id="menuOpenBtn"><i data-lucide="menu" class="header__menu-open-btn"></i></button>
+<button id="menuOpenBtn" class="header__menu-open-btn"><i data-lucide="menu"></i></button>
 {{ partial "menu.html" (dict "menuID" "main" "page" .) }}
